...
        }
    }
}

@Composable
internal fun CompatibilityProgressProxy(
    tag: String,
    value: Float,
    valueRange: ClosedFloatingPointRange<Float>,
    onValueChange: (Float) -> Unit,
) {
    Box(
        modifier = Modifier
...
